# amazon-now-hackon

./: .env.example  .gitignore  README.md  package.json  requirements.txt
.github/workflows/: deploy-all.yml  deploy.yml
backend/: nohup.out  pyproject.toml
backend/app/: azure.py  bedrock.py  data.py  engine.py  gcal.py  gemini.py  group.py  main.py
backend/app/utils/: env.py
backend/tests/: test_api.py  test_nowspeak.py
config/: calendar.json  catalog.json  coupons.json  family.json  fridge.json  history.json  personas.json  recipes.json  scenarios.json  settings.json
frontend/: package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/checkout/: page.tsx
frontend/src/app/dish-result/: page.tsx
frontend/src/app/group/: page.tsx
frontend/src/app/nowspeak/: page.tsx
frontend/src/app/orders/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/recipes/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/speaknow/: page.tsx
frontend/src/components/: AppHeader.tsx  BottomNav.tsx  CalendarConnect.tsx  CartBar.tsx  DishUploadModal.tsx  NextBuy.tsx  NowCast.tsx  PhoneFrame.tsx  ProductCard.tsx  Providers.tsx  Stepper.tsx  VegMark.tsx
frontend/src/lib/: api.ts  boot.tsx  cart.tsx  format.ts  types.ts  useAlternatives.ts  useVoice.ts
frontend/tests/: demo.spec.ts  smoke.spec.ts
scripts/: build_catalog.py  build_recipes.py  dedup_catalog.py  generate_bedrock_embeddings.py  migrate_to_dynamodb.py  validate_nowspeak.py
(+3 files in other folders)
