[project]
name = "amazonnow-backend"
version = "0.1.0"
description = "Amazon Now demo API"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.29",
    "fastapi>=0.137.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
